fixed grid wrap in nft box

--- a/src/sass/nftBox.scss
+++ b/src/sass/nftBox.scss
@@ -1,5 +1,5 @@
 .grid-element {
-  width: 200px;
+  min-width: 200px;
 }
 .grid-header {
   width: 100%;
@@ -44,7 +44,7 @@
 }
 .grid-content {
   width: 100%;
-  height: 200px;
+  min-height: 200px;
   border-left: 1px solid black;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
