--- a/src/sass/nftCollection.scss
+++ b/src/sass/nftCollection.scss
@@ -16,6 +16,7 @@
     }
     .grid {
       display: flex;
+      flex-wrap: wrap;
       gap: 20px;
       margin: 32px 32px 0 0;
     }
